pull from trunk and fixing build break of nodso branch