@@ -9,8 +9,6 @@ import com.tc.process.Exec;
 import com.tc.process.Exec.Result;
 import com.tc.test.config.model.TestConfig;
 import com.tc.text.Banner;
-import com.tc.timapi.Version;
-import com.tc.util.runtime.Vm;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -19,8 +17,17 @@ import java.util.List;
 import javax.management.remote.jmxmp.JMXMPConnector;
 
 public class TestClientManager {
+  /**
+   * If set to true allows debugging of java applications
+   */
   private static final boolean   DEBUG_CLIENTS = Boolean.getBoolean("standalone.client.debug");
-  public static String           CLIENT_ARGS   = "client.args";
+
+  /**
+   * arguments to be passed to the clients. e.g mvn -Psystem-tests integration-test -Dtest=MyTest
+   * -DclientJVMArgs="-DsomeProp=value1 -DsomeProp2=value2" In the spawned clients, these will be passed as JVMArgs
+   * System.getProperty("someProp"); => will return value1 System.getProperty("someProp2"); => will return value2
+   */
+  public static final String     CLIENT_ARGS   = "clientJVMArgs";
 
   private volatile int           clientIndex   = 1;
   private final File             tempDir;
@@ -33,8 +40,16 @@ public class TestClientManager {
     this.testBase = testBase;
   }
 
+  /**
+   * Starts a new client
+   * 
+   * @param client : the class which is to be started as client
+   * @param withStandaloneJar : do we need to start the client with standalone jar
+   * @param clientName name of : the client to be started
+   * @param extraClientMainArgs : List of arguments with which the client will start
+   */
   protected void runClient(Class<? extends Runnable> client, boolean withStandaloneJar, String clientName,
-                           List<String> extraClientArgs) throws Throwable {
+                           List<String> extraClientMainArgs) throws Throwable {
 
     ArrayList<String> jvmArgs = new ArrayList<String>();
     if (DEBUG_CLIENTS) {
@@ -42,24 +57,25 @@ public class TestClientManager {
       jvmArgs.add("-agentlib:jdwp=transport=dt_socket,suspend=y,server=y,address=" + debugPort);
       Banner.infoBanner("waiting for debugger to attach on port " + debugPort);
     }
-    String clientArgs = System.getProperty(CLIENT_ARGS);
-    if (clientArgs != null) {
-      extraClientArgs.add(clientArgs);
-    }
 
     File licenseKey = new File("test-classes/terracotta-license.key");
     jvmArgs.add("-Dcom.tc.productkey.path=" + licenseKey.getAbsolutePath());
-    jvmArgs.addAll(extraClientArgs);
-
-    List<String> arguments = new ArrayList<String>();
-    arguments.add(client.getName());
-    arguments.add(Integer.toString(testBase.getTestControlMbeanPort()));
 
     // do this last
     configureClientExtraJVMArgs(jvmArgs);
 
     // removed duplicate args and use the one added in the last in case of multiple entries
     TestBaseUtil.removeDuplicateJvmArgs(jvmArgs);
+
+    String clientArgs = System.getProperty(CLIENT_ARGS);
+    if (clientArgs != null) {
+      extraClientMainArgs.add(clientArgs);
+    }
+
+    List<String> clientMainArgs = new ArrayList<String>();
+    clientMainArgs.add(client.getName());
+    clientMainArgs.add(Integer.toString(testBase.getTestControlMbeanPort()));
+    clientMainArgs.addAll(extraClientMainArgs);
 
     String workDirPath = tempDir + File.separator + clientName;
     File workDir;
@@ -81,18 +97,18 @@ public class TestClientManager {
     System.out.println("XXX working directory: " + workDir.getAbsolutePath());
 
     File verboseGcOutputFile = new File(workDir, "verboseGC.log");
-    setupVerboseGC(jvmArgs, verboseGcOutputFile);
+    TestBaseUtil.setupVerboseGC(jvmArgs, verboseGcOutputFile);
 
-    LinkedJavaProcess clientProcess = new LinkedJavaProcess(TestClientLauncher.class.getName(), arguments, jvmArgs);
+    LinkedJavaProcess clientProcess = new LinkedJavaProcess(TestClientLauncher.class.getName(), clientMainArgs, jvmArgs);
     String classPath = testBase.createClassPath(client, withStandaloneJar);
     classPath = testBase.makeClasspath(classPath, testBase.getTestDependencies());
     classPath = addRequiredJarsToClasspath(client, classPath);
     classPath = addExtraJarsToClassPath(classPath);
     clientProcess.setClasspath(classPath);
 
-    System.err.println("Starting client with jvmArgs: " + jvmArgs);
-    System.err.println("LinkedJavaProcess arguments: " + arguments);
-    System.err.println("LinkedJavaProcess classpath: " + classPath);
+    System.err.println("\nStarting client with jvmArgs: " + jvmArgs);
+    System.err.println("\nLinkedJavaProcess main method arguments: " + clientMainArgs);
+    System.err.println("\nLinkedJavaProcess classpath: " + classPath + "\n");
 
     clientProcess.setDirectory(workDir);
 
@@ -121,25 +137,13 @@ public class TestClientManager {
     String jmxp = TestBaseUtil.jarFor(JMXMPConnector.class);
     String log4j = TestBaseUtil.jarFor(org.apache.log4j.LogManager.class);
     String stringUtils = TestBaseUtil.jarFor(StringUtils.class);
-    String timApi = TestBaseUtil.jarFor(Version.class);
     classPath = testBase.makeClasspath(classPath, mbsp, test, junit, linkedChild, abstractClientBase, jmxp, log4j,
-                                       stringUtils, timApi);
+                                       stringUtils);
     return classPath;
   }
 
   private void configureClientExtraJVMArgs(List<String> jvmArgs) {
     jvmArgs.addAll(testConfig.getClientConfig().getExtraClientJvmArgs());
-  }
-
-  private void setupVerboseGC(List<String> jvmArgs, File verboseGcOutputFile) {
-    if (Vm.isJRockit()) {
-      jvmArgs.add("-Xverbose:gcpause,gcreport");
-      jvmArgs.add("-Xverboselog:" + verboseGcOutputFile.getAbsolutePath());
-    } else {
-      jvmArgs.add("-Xloggc:" + verboseGcOutputFile.getAbsolutePath());
-      jvmArgs.add("-XX:+PrintGCTimeStamps");
-      jvmArgs.add("-XX:+PrintGCDetails");
-    }
   }
 
 }
